<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="250dp"
    android:maxHeight="600dp"
    android:minWidth="600dp"
    android:maxWidth="600dp"
    android:background="@drawable/nebg"
    android:gravity="bottom"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">


<RelativeLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="16sp"
        android:fontFamily="@font/tes"
        android:gravity="center"
        android:text="@string/withdraw_sure"
        android:textColor="@android:color/white" />
</RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_height="50dp">
            <Button
                android:layout_width="120dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:id="@+id/cekilyes"
                android:textColor="@color/white"
                android:background="@drawable/girisbutton"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent" />

            <Button
                android:textAllCaps="false"
                android:layout_width="120dp"
                android:textColor="@color/white"
                android:background="@drawable/girisbutton"
                android:text="@string/no"
                android:id="@+id/cekilno"
                android:layout_height="match_parent" />

        </LinearLayout>




    </RelativeLayout>

</LinearLayout>