<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.baursaq.million.Game"
    android:background="@drawable/newback"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/aqsha"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round"
            android:elevation="5dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/exit"
            android:textColor="@android:color/black" />

        <ToggleButton
            android:id="@+id/menu"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/round"
            android:elevation="5dp"
            android:textColor="@color/white"
            android:textOff="&#8376;"
            android:textOn="X"
            android:textSize="20dp" />


    </RelativeLayout>
<androidx.cardview.widget.CardView
    android:id="@+id/carrd"
    app:cardCornerRadius="15dp"
    android:visibility="invisible"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:background="@drawable/nebg"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:elevation="10dp">

            <LinearLayout
                android:id="@+id/alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/para15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p10000000"
                    android:fontFamily="@font/gothic"
                    android:textColor="#FFB300"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/gothic"
                    android:text="@string/p5000000"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/gothic"
                    android:text="@string/p2500000"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p1200000"
                    android:fontFamily="@font/gothic"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p600000"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p300000"
                    android:textColor="#FFB300"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p150000"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p90000"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/para7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p60000"
                    android:fontFamily="@font/tes"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p40000"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p20000"
                    android:textColor="#FFB300"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p10000"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p5000"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tes"
                    android:layout_centerHorizontal="true"
                    android:text="@string/p2500"
                    android:textColor="#fff"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/para1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/tes"
                    android:text="@string/p1000"
                    android:textColor="#fff"
                    android:textSize="20dp" />


            </LinearLayout>
        </RelativeLayout>



    </ScrollView>
</androidx.cardview.widget.CardView>


    <RelativeLayout
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/level"
                android:layout_width="100dp"
                android:layout_height="30sp"
                android:background="#ffffff"
                android:elevation="@dimen/cardview_compat_inset_shadow"
                android:gravity="center"
                android:text="@string/p1000"
                android:textColor="#778BF0"
                android:textSize="16dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/sorucontainer"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/questback"
            android:gravity="center"
            android:text="TEXT"
            android:textColor="#5C5C5C"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/thr"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:elevation="@dimen/cardview_compat_inset_shadow"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/yariyariya"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/fiftyy" />

            <ImageButton
                android:id="@+id/seyircisor"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/peoplee" />

            <ImageButton
                android:id="@+id/telefonla"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/phonee" />
        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/first"
        android:layout_above="@+id/adreal"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:background="@drawable/girisbutton"
                android:tag="1"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="A"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/b"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/girisbutton"
                android:layout_margin="3dp"
                android:tag="2"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="B"
                tools:ignore="SmallSp" />



            <Button
                android:id="@+id/c"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/girisbutton"
                android:layout_margin="3dp"
                android:padding="5dp"
                android:tag="3"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="C"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/girisbutton"
                android:layout_margin="3dp"
                android:tag="4"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="D"
                tools:ignore="SmallSp" />


        </LinearLayout>



    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/adreal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </RelativeLayout>



</RelativeLayout>